--- a/index.html
+++ b/index.html
@@ -1,7 +1,89 @@
+<!DOCTYPE html>
 <html>
-<body>
-  <h1>Michelle Parnis</h1>
-  <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
-</body>
+  <head>
+    <link rel='stylesheet' href="styles.css">
+  </head>
+
+  <header>
+    <h1>Michelle's Website Style Guide</h1>
+  </header>
+
+  <body>
+
+    <div class=colors>
+      <p class="section">Colors</p>
+
+        <div class="panel june-bugs">
+            <p class="color-name">June Bugs</p>
+            <p class="color-hex">#B86636</p>
+        </div>
+
+        <div class="panel golden-apricot">
+            <p class="color-name">Golden Apricot</p>
+            <p class="color-hex">#DEA852</p>
+        </div>
+
+        <div class="panel ashwood">
+            <p class="color-name">Ashwood</p>
+            <p class="color-hex">#EDD6AD</p>
+        </div>
+
+        <div class="panel whitewashed-fence">
+            <p class="color-name">Whitewashed Fence</p>
+            <p class="color-hex">#FBF3E4</p>
+        </div>
+
+    </div>
+
+    <div class=fonts>
+      <p class="section">Fonts</p>
+        <div class="font-type Agbalumo">
+            <p class="font-label">Agbalumo</p>
+            <p class="regular">The quick brown fox jumps over the lazy dog.</p>
+        </div>
+
+        <div class="font-type DM-Serif-Display">
+            <p class=font-label>DM Serif Display</p>
+            <p class="regular">The quick brown fox jumps over the lazy dog.</p>
+            <p class="italic">The quick brown fox jumps over the lazy dog.</p>
+        </div>
+
+        <div class="font-type Roboto">
+            <p class="font-label">Roboto</p>
+            <p class="regular">The quick brown fox jumps over the lazy dog.</p>
+            <p class="italic">The quick brown fox jumps over the lazy dog.</p>
+            <p class="bold">The quick brown fox jumps over the lazy dog.</p>
+        </div>
+
+
+    </div>
+
+    <div class=styles>
+      <p class="section">Text Styles</p>
+
+      <div class="content">
+
+      <h1>H1: Main page heading</h1>
+        <ul>
+            <li>Font-weight: 400</li>
+            <li>Font-size: 30px</li>
+            <li>Font-family: Agbalumo</li>
+        </ul>
+
+      <h2>H2: Subheading</h2>
+        <ul>
+            <li>Font-weight: 300</li>
+            <li>Font-size: 20px</li>
+            <li>Font-family: DM Serif Display</li>
+        </ul>
+
+      <h3>H3: Paragraph text</h3>
+        <ul>
+            <li>Font-weight: 300</li>
+            <li>Font-size: 12px</li>
+            <li>Font-family: Roboto</li>
+        </ul>
+        </div>
+    </div>
+  </body>
 </html>
